Split tls certs and ca into two different secrets

--- a/templates/secret-tls-slave.yaml
+++ b/templates/secret-tls-slave.yaml
@@ -1,8 +1,9 @@
-{{ if not .Values.existingSecret }}
+{{ if .Values.tls.enabled }}
+{{ if not .Values.tls.getCertsFromCertManager }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-tls-slave
+  name: {{ .Values.tls.secretSlave }}
   labels:
     app: {{ template "openldap.name" . }}-slave
     chart: {{ template "openldap.chart" . }}
@@ -15,6 +16,22 @@ type: kubernetes.io/tls
 data:
   tls.crt: {{ .Values.tls.files.slave.tlsCrt | b64enc | quote }}
   tls.key: {{ .Values.tls.files.slave.tlsKey | b64enc | quote }}
-  ca.crt: {{ .Values.tls.files.slave.caCrt | b64enc | quote }}
-  dhparam.pem: {{ .Values.tls.files.slave.dhparamPem | b64enc | quote }}
+---
+{{ end }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.tls.secretSlave }}-ca
+  labels:
+    app: {{ template "openldap.name" . }}-slave
+    chart: {{ template "openldap.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+{{- if .Values.extraLabels }}
+{{ toYaml .Values.extraLabels | indent 4 }}
+{{- end }}
+type: Opaque
+data:
+  ca.crt: {{ .Values.tls.files.common.caCrt | b64enc | quote }}
+  dhparam.pem: {{ .Values.tls.files.common.dhparamPem | b64enc | quote }}
 {{ end }}
