Add s3 auth-data to a secret

--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -15,4 +15,8 @@ type: Opaque
 data:
   LDAP_ADMIN_PASSWORD: {{ .Values.adminPassword | b64enc | quote }}
   LDAP_CONFIG_PASSWORD: {{ .Values.configPassword  | b64enc | quote }}
+  {{- if .Values.backup.enabled }}
+  AWS_ACCESS_KEY_ID: {{ .Values.backup.s3.login | quote }}
+  AWS_SECRET_ACCESS_KEY: {{ .Values.backup.s3.password | b64enc | quote }}
+  {{- end }}
 {{ end }}
