--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -16,7 +16,7 @@ data:
   LDAP_ADMIN_PASSWORD: {{ .Values.adminPassword | b64enc | quote }}
   LDAP_CONFIG_PASSWORD: {{ .Values.configPassword  | b64enc | quote }}
   {{- if .Values.backup.enabled }}
-  AWS_ACCESS_KEY_ID: {{ .Values.backup.s3.login | quote }}
+  AWS_ACCESS_KEY_ID: {{ .Values.backup.s3.login | b64enc | quote }}
   AWS_SECRET_ACCESS_KEY: {{ .Values.backup.s3.password | b64enc | quote }}
   {{- end }}
 {{ end }}
