--- a/templates/cronjob-backup-create.yaml
+++ b/templates/cronjob-backup-create.yaml
@@ -55,5 +55,5 @@ spec:
               value: {{ .Values.backup.s3.region }}
             envFrom:
               - secretRef:
-                  name: {{ template "openldap.fullname" . }}}
+                  name: {{ template "openldap.fullname" . }}
 {{- end -}}
